# shop

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
app/cart/: apps.py  cart.py  context_processors.py  forms.py  views.py
app/core/: settings.py  urls.py
app/coupons/: admin.py  apps.py  forms.py  models.py  views.py
app/coupons/migrations/: 0001_initial.py
app/orders/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
app/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
app/payments/: apps.py  tasks.py  tests.py  views.py  webhooks.py
app/shop/: admin.py  apps.py  models.py  recommender.py  tests.py  views.py
app/shop/fixtures/: notes.txt  shop.json
app/shop/migrations/: 0001_initial.py
app/templates/: home.html
app/templates/orders/: orders_created.html  (+1 more)
cart/: cart.py  views.py
core/: settings.py  urls.py
coupons/migrations/: 0001_initial.py
orders/: models.py  tests.py  views.py
orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
payments/: tasks.py  tests.py  views.py
shop/: models.py  recommender.py  tests.py  views.py
shop/migrations/: 0001_initial.py
static/js/: video.js
templates/: base.html  navbar.html
templates/cart/: cart_detail.html
templates/orders/: orders_create.html
templates/payments/: canceled.html  process.html
templates/shop/: shop_detail.html  shop_list.html
(+1 files in other folders)
